<resources>
    <string name="action_settings">Settings</string>
    <string name="your_privacy_is_a_fundamental_right_html">Your privacy is a fundamental human right.</string>
    <string name="you_dont_need_a_vpn_to_use_frostwire_bullet_html"><![CDATA[* Although recommended for your downloads, <b>you do not need a VPN to use FrostWire. </b>]]></string>
    <string name="unprotected_connections_visibility_bullet_html"><![CDATA[ An unprotected connection means everything you do online (including <b>searches, messaging, and downloads</b>) may be monitored by anyone on your network and even by your Internet service provider.<br><br>We recommend using ExpressVPN to encrypt your connection and <b>safeguard your privacy</b>.]]></string>
    <string name="protected_connections_visibility_bullet_html"><![CDATA[ You\'re connected to the Internet using a VPN. <br><br> If you are not already, we recommend using <b>ExpressVPN</b> to encrypt your connection and <b>safeguard your privacy</b>. ]]></string>
    <string name="app_name">JDonkey</string>
    <string name="application_label">FrostWire</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="activity_browse_peers_name">People Nearby</string>
    <string name="activity_chat_name">Chat</string>
    <string name="activity_downloads_name">Active Downloads</string>
    <string name="activity_uploads_name">Active Uploads</string>
    <string name="activity_about">About</string>
    <string name="activity_debug_name">Debug</string>
    <string name="activity_VPN">Connection</string>
    <string name="disconnected">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure">All transfers will stop.\nAre you sure?</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="wait">Wait</string>
    <string name="exit">Exit</string>
    <string name="no_wifi_want_to_fix_it_question">You\'re not connected to a Wi-Fi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services">Your Wi-Fi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services">The Wi-Fi network has changed. Restarting Services.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="search_label">Search</string>
    <string name="settings_description">Search Settings</string>
    <string name="clear_finished">Clear Finished</string>
    <string name="support_free_software">Support Free Software</string>
    <string name="show_love">Love FrostWire?</string>
    <string name="waiting">Waiting…</string>
    <string name="use_icons_to_browse">Use the icons to browse files.</string>
    <string name="type_to_filter_results">Type to filter results.</string>
    <string name="fetching_file_list">Fetching list of shared</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="peer">Peer</string>
    <string name="peers">Peers</string>
    <string name="copy">Copy</string>
    <string name="audio">Audio</string>
    <string name="audio_music">Audio/Music</string>
    <string name="video">Video</string>
    <string name="application">Application</string>
    <string name="applications">Apps</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="sharing">Sharing</string>
    <string name="send_pm">Send Private Message</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="change_manual_listening_port">Set Listening Port 1000 and 65535</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="max_concurrent_uploads">Maximum Simultaneous Uploads</string>
    <string name="search_no_keywords">Please enter search keywords</string>
    <string name="search_select_filetype">Please select a file type</string>
    <string name="select_all">Select All</string>
    <string name="searching_for">Searching for</string>
    <string name="search_for_type_files">Search for %s files</string>
    <string name="update_title">Update time!</string>
    <string name="update_message">FrostWire has downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="next_time">Next Time</string>
    <string name="change_my_nickname">Change my nickname</string>
    <string name="try_changing_your_nickname">Enter your nickname</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="go_to">Go To</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_description">Enjoy the ad-free experience, support FrostWire</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My Files</string>
    <string name="clear_messages">Clear messages</string>
    <string name="chat_actions">Chat Actions</string>
    <string name="settings">Settings</string>
    <string name="please_connect">Please connect to use this feature</string>
    <string name="remove">Remove</string>
    <string name="try_valid_port_next_time">Try a valid port next time 1000 and 65500</string>
    <string name="still_listening_on_port">Still listening on port</string>
    <string name="uh_still_listening_on_port">Uh? I\'m still listening on port</string>
    <string name="new_port_saved">New Port saved</string>
    <string name="now_on_port">Now on port</string>
    <string name="stop_all_transfers_message">This will cancel all ongoing and queued downloads. All transferred data will be lost. Are you sure?</string>
    <string name="files">files</string>
    <string name="touch_filetype_icon">Touch icon to change file type</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="downloads">Downloads</string>
    <string name="minimize_application">Minimize JDonkey</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="tell_others_chooser">Tweet / SMS / Email</string>
    <string name="tell_others_subject">Got FrostWire for Android yet?</string>
    <string name="and_choose_what_filetypes_to_share">Check what types of files you\'d like to enable for sharing on the FrostWire Mobile Network and nearby Wi-Fi enabled Desktops.</string>
    <string name="before_getting_started">Before you get started</string>
    <string name="user_connecting">User connecting</string>
    <string name="accept_connection_from">Accept connection from</string>
    <string name="please_enter_a_number">Please enter a number</string>
    <string name="gotta_have_at_least_one_upload_slot">Gotta have at least one upload slot</string>
    <string name="only_up_to_n_uploads_at_the_same_time">Only up to %s uploads at the same time</string>
    <string name="max_simultaneous_uploads_saved_n">Max Simultaneous Uploads Saved (%s)</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="other_settings">Other Settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G for BitTorrent</string>
    <string name="use_mobile_data_summary">Use mobile network for ed2k downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="dummy_title" translatable="false">[Title]</string>
    <string name="transfers_settings">Transfers settings</string>
    <string name="transfers_max_downloads_summary">Max Downloads</string>
    <string name="transfers_max_downloads">Max Downloads</string>
    <string name="transfers_max_total_connections_summary">Max Total Connections</string>
    <string name="transfers_max_total_connections">Max Total Connections</string>
    <string name="dummy_summary" translatable="false">[Summary]</string>
    <string name="dummy_downloads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="dummy_uploads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="show_transfers_on_download_start">Show Transfers On Download Start</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="clear">Clear</string>
    <string name="storage_preference_title">Select Storage Location</string>
    <string name="storage_preference_summary">The default storage location where files will be saved.</string>
    <string name="ed2k">ED2K</string>
    <string name="ed2k_network_summary">Connection status</string>
    <string name="clear_search_cache">Clear search cache</string>
    <string name="clear_search_cache_summary">Clear search cache entries</string>
    <string name="transfers_select_all">all</string>
    <string name="transfers_select_downloading">downloading</string>
    <string name="transfers_select_completed">completed</string>
    <string name="add_transfer_label">Paste a ED2K link</string>
    <string name="saving_to_sd_card">Saving to SD card.</string>
    <string name="android_will_erase_files_if_frostwire_is_uninstalled">Android will erase downloaded files if FrostWire is uninstalled.</string>
    <string name="saving_to_internal_memory">Saving to Internal Memory</string>
    <string name="saving_to_internal_memory_description">You also have an SD card (%1$s free)</string>
    <string name="notify_jdonkey_is_running">Notify if JDonkey is running</string>
    <string name="notify_jdonkey_is_running_summary">Show a permanent Android notification with status of transfers</string>
    <string name="common_settings">Common settings</string>
    <string name="listen_port">Listen port</string>
    <string name="listen_port_summary">Port for incoming connections</string>
    <string name="NA">N/A</string>
    <string name="servers_settings">Servers settings</string>
    <string name="random_server">Random</string>
    <string name="random_server_summary">Choose random server on start</string>
    <string name="connect_on_start_server">Reconnect</string>
    <string name="connect_on_start_server_summary">Connect to server on start</string>
    <string name="show_server_messages_summary">Show messages from server</string>
    <string name="show_server_messages">Server msg</string>
    <string name="search_parameter_min_size">Min size, Mb</string>
    <string name="search_parameter_max_size">Max size, Mb</string>
    <string name="search_parameter_sources">Sources</string>
    <string name="peer_speed">Speed %1$s</string>
    <string name="peer_total_bytes_download">Total bytes %1$s</string>
</resources>