<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:frostwire="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              xmlns:ads="http://schemas.android.com/apk/res-auto">

    <org.dkf.jmule.views.ClearableEditTextView
            android:id="@+id/fragment_transfers_add_transfer_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            frostwire:clearable_hint="@string/add_transfer_label"/>

    <RadioGroup
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:checkedButton="@+id/fragment_transfers_button_select_all"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_all"
                style="@style/TransfersButton"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_all"
                android:textSize="12sp"/>

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_downloading"
                style="@style/TransfersButton"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_downloading"
                android:textSize="12sp"/>

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_completed"
                style="@style/TransfersButton"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_completed"
                android:textSize="12sp"/>
    </RadioGroup>

    <org.dkf.jmule.views.RichNotification
            android:id="@+id/fragment_transfers_sd_card_notification"
            frostwire:rich_notification_icon="@drawable/sd_card_notification"
            frostwire:rich_notification_title="@string/saving_to_sd_card"
            frostwire:rich_notification_title_underlined="true"
            frostwire:rich_notification_description="@string/android_will_erase_files_if_frostwire_is_uninstalled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <org.dkf.jmule.views.RichNotification
            android:id="@+id/fragment_transfers_internal_memory_notification"
            frostwire:rich_notification_icon="@drawable/internal_memory_notification"
            frostwire:rich_notification_title="@string/saving_to_internal_memory"
            frostwire:rich_notification_title_underlined="true"
            frostwire:rich_notification_description="@string/saving_to_internal_memory_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/body_background_gray_light">
        <org.dkf.jmule.views.SwipeLayout
                android:id="@+id/fragment_transfers_swipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ExpandableListView
                    android:id="@+id/fragment_transfers_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/body_background_gray_light"
                    android:fadingEdge="none"
                    android:groupIndicator="@android:color/transparent"/>
        </org.dkf.jmule.views.SwipeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="#ff1d2934"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_2_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/transfers_indicators_background">

        <View android:layout_width="1px" android:layout_height="fill_parent" android:background="@color/black"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="right|center_vertical">
            <TextView
                    android:id="@+id/fragment_transfers_text_downloads"
                    style="@style/TransfersIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/transfers_triangle_downward"
                    android:paddingRight="8dp"
                    android:text="@string/dummy_downloads_indicator"/>

            <TextView
                    android:id="@+id/fragment_transfers_text_uploads"
                    style="@style/TransfersIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/transfers_triangle_upward"
                    android:paddingRight="8dp"
                    android:text="@string/dummy_uploads_indicator"/>

            <TextView
                    android:id="@+id/fragment_transfers_dht"
                    style="@style/TransfersIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/transfers_triangle_upward"
                    android:paddingRight="8dp"
                    android:text="@string/dht_nodes"/>
        </LinearLayout>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff1d2934"/>

</LinearLayout>
