<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/body_background_gray">

    <ImageView
        android:id="@+id/view_preference_servers_list_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@null"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/view_preference_servers_list_item_label"
        style="@style/TransfersList.SubItem.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/view_preference_servers_list_item_icon"
        android:text="@string/dummy_title" />

    <TextView
        android:id="@+id/view_preference_servers_list_item_description"
        style="@style/TransfersList.SubItem.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_preference_servers_list_item_label"
        android:layout_toRightOf="@id/view_preference_servers_list_item_icon"
        android:text="@string/dummy_summary" />

    <TextView
        android:id="@+id/view_server_details"
        style="@style/TransferListItemSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_preference_servers_list_item_description"
        android:layout_toRightOf="@id/view_preference_servers_list_item_icon"
        android:text="@string/NA" />

    <TextView
        android:id="@+id/view_server_user_id"
        style="@style/TransferListItemSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_server_details"
        android:layout_toRightOf="@id/view_preference_servers_list_item_icon"
        android:text="@string/NA" />

</RelativeLayout>